--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -135,7 +135,6 @@ select {
 .site-header__nav-item--title {
   width: 130px;
   height: 34px;
-  border-radius: 30px;
   flex: none;
   order: 1;
   flex-grow: 0;
@@ -189,11 +188,8 @@ select {
 }
 
 .site-header__nav-title {
-  position: absolute;
-  width: 59px;
-  height: 19px;
-  left: calc(50% - 59px / 2 + 0.5px);
-  top: calc(50% - 19px / 2 + 0.5px);
+  width: 100%;
+  height: 100%;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
@@ -205,7 +201,12 @@ select {
   text-align: center;
   background: transparent;
   border: none;
-  transition: color var(--duration-fast) var(--easing-standard);
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background var(--duration-fast) var(--easing-standard),
+    color var(--duration-fast) var(--easing-standard);
   cursor: pointer;
 }
 
