--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -470,7 +470,7 @@ select {
   display: flex;
   flex-direction: column;
   gap: var(--space-sm);
-  margin-bottom: 100px;
+  margin-top: 100px;
 }
 
 .test-list__header h2 {
