Add margin-top to select element in index.css for improved layout

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -290,6 +290,7 @@ select {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 100px;
 }
 
 .site-main[data-view='route'] > :not(.route-outlet) {
