Update .site-main styles in index.css for improved layout
- Set max-width for .site-main to enhance layout consistency.
- Changed flex-direction to flex-flow for better alignment of child elements.

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -286,9 +286,10 @@ select {
 
 /* Main */
 .site-main {
+  max-width: 1230px;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-flow: column flex-start;
   align-items: center;
   margin-top: 100px;
 }
