--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -289,7 +289,7 @@ select {
   max-width: 1230px;
   width: 100%;
   display: flex;
-  flex-flow: column flex-start;
+  flex-direction: column;
   align-items: center;
   margin-top: 100px;
 }
