--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -522,12 +522,14 @@ select {
   height: 56px;
   padding: 0 24px;
   border-radius: 100px;
-  background: #00ffff;
+  --btn-bg: #00ffff;
+  background: var(--btn-bg);
   font-size: 18px;
   font-weight: 700;
   color: #000;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 12px;
   border: none;
   --btn-border: transparent;
